erDiagram
    Periodo ||--o{ FactCarteraPrestamo : agrupa
    Periodo ||--o{ FactAreaFinanciada : agrupa
    Periodo ||--o{ FactDesembolsoCobro : agrupa
    Periodo ||--o{ FactMontoDestino : agrupa
    Sucursal ||--o{ FactCarteraPrestamo : registra
    Sucursal ||--o{ FactAreaFinanciada : registra
    Sucursal ||--o{ FactDesembolsoCobro : registra
    Destino ||--o{ FactMontoDestino : clasifica
    FuenteDato ||--o{ FactCarteraPrestamo : documenta
    FuenteDato ||--o{ FactAreaFinanciada : documenta
    FuenteDato ||--o{ FactDesembolsoCobro : documenta
    FuenteDato ||--o{ FactMontoDestino : documenta
